--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ box-shadow: 7px 7px 20px #502323;
 <script>
 function go() {
     window.onbeforeunload = null;
-    window.location.href = 'https://www.copovazio.wiki/?sl=5841483-d9bb6&pub_click_id={External_ID_from_traffic_source}&site={subID}&pub_sub_id={sub_subID}';
+    window.location.href = 'https://www.cargadopato.boats/click?offer_id=30920&pub_id=226097&pub_click_id=ADD_CLICK_ID_HERE&site=PASS_SITE_HERE';
 }
 </script>
 <script>
