--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ box-shadow: 7px 7px 20px #502323;
 <script>
 function go() {
     window.onbeforeunload = null;
-    window.location.href = 'https://www.cargadopato.boats/click?offer_id=30920&pub_id=226097&pub_click_id=ADD_CLICK_ID_HERE&site=PASS_SITE_HERE';
+    window.location.href = 'https://rkxwdpf.com/cl/15cb2dde5bafd447?p1=&p2=&source=&site=';
 }
 </script>
 <script>
